Add an enduserslide parameter

--- a/pdfpcnotes.sty
+++ b/pdfpcnotes.sty
@@ -12,6 +12,7 @@
 \DeclareStringOption{endtime}
 \DeclareStringOption{lastminutes}
 \DeclareStringOption{fontsize}
+\DeclareStringOption{enduserslide}
 
 \ProcessKeyvalOptions*
 
@@ -34,6 +35,7 @@
  \PDFPC@option{end_time}{\PDFPC@endtime}
  \PDFPC@option{last_minutes}{\PDFPC@lastminutes}
  \PDFPC@option{font_size}{\PDFPC@fontsize}
+ \PDFPC@option{end_user_slide}{\PDFPC@enduserslide}
   \immediate\write\pdfpcnotesfile{[notes]}
 }
 % define a # http://tex.stackexchange.com/a/37757/10327
